# nes-rust-client

./: Cargo.toml  build.rs
examples/: connection_check_example.rs  expr_gen_example.rs  filter_example.rs  join_example.rs  query_example.rs  ron_example.rs  union_example.rs  window_example.rs
grpc/: SerializableQueryPlan.proto
src/: lib.rs  prelude.rs
src/expr_gen/: expr_gen.rs  mod.rs
src/expression/: binary_expression.rs  expression.rs  expression_builder.rs  expression_builder_macros.rs  field.rs  literal.rs  unary_expression.rs
src/operator/: mod.rs
src/query/: expression.rs  join.rs  mod.rs  operator.rs  query.rs  sink.rs  stringify.rs  time.rs  window.rs
src/query/expr_gen/: expr_gen.rs
src/query/expression/: binary_expression.rs  expression.rs  expression_builder.rs  expression_builder_macros.rs  field.rs  literal.rs  mod.rs  unary_expression.rs
src/query/window/: aggregation.rs  mod.rs  window_descriptor.rs
src/runtime/: mod.rs  nebula_stream_runtime.rs  query.rs  query_state.rs
src/serialization/: mod.rs
src/serialization/cpp/: mod.rs  serialize_query.rs
src/serialization/protobuf/: mod.rs  serialize_data_type.rs  serialize_expression.rs  serialize_operator.rs  serialize_query.rs  serialize_sink.rs  serialize_window.rs
