[package]
name = "nebulastream-rust-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12.4"
prost-types = "0.12.6"
reqwest = {version="0.12.4", features = ["json"]}
serde_json = "1.0.117"
tokio = {version="1.37.0", features = ["macros", "rt-multi-thread"]}
# tonic = "0.11.0"

[build-dependencies]
prost-build = { version = "0.12.6"}
# tonic-build = "0.11.0"
