[package]
name = "nes-rust-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12.4"
prost-types = "0.12.6"
reqwest = {version="0.12.4", features = ["json"]}
serde_json = "1.0.117"
tokio = {version="1.37.0", features = ["macros", "rt-multi-thread"]}
nes-types = {path="../nes-types"}
log = "0.4.22"
# tonic = "0.11.0"

[build-dependencies]
prost-build = { version = "0.12.6"}

[dev-dependencies]
simple_logger = "5.0.0"
# tonic-build = "0.11.0"
