[package]
name = "nes-rust-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
prost-build = { version = "0.12.6"}

[dependencies]
prost = "0.12.4"
prost-types = "0.12.6"
reqwest = {version="0.12.4", features = ["json"]}
serde_json = "1.0.117"
nes-types = {path="../nes-types"}
log = "0.4.22"
rand = "0.8.5"
strum = "0.26.3"
strum_macros = "0.26.4"
ron = "0.8"
serde = {version = "1", features = ["derive"]}

[dev-dependencies]
simple_logger = "5.0.0"
tokio = {version="1.37.0", features = ["macros", "rt-multi-thread"]}
